Aspect (AOP) adicionado e sistema de log melhorado